--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.0",
+    "@angular-devkit/schematics": "^11.2.12",
     "@angular-eslint/eslint-plugin": "~4.2.0",
     "@angular-eslint/eslint-plugin-template": "~4.2.0",
     "@angular-eslint/template-parser": "~4.2.0",
@@ -54,6 +55,9 @@
     "@nrwl/linter": "12.1.1",
     "@nrwl/tao": "11.6.3",
     "@nrwl/workspace": "11.6.3",
+    "@nxext/svelte": "^11.3.2",
+    "@testing-library/svelte": "^3.0.3",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
@@ -63,9 +67,15 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-svelte3": "^3.1.2",
     "jest": "26.2.2",
     "jest-preset-angular": "8.4.0",
     "prettier": "2.2.1",
+    "rollup-plugin-local-resolve": "^1.0.7",
+    "svelte": "^3.37.0",
+    "svelte-check": "^1.4.0",
+    "svelte-jester": "^1.3.2",
+    "svelte-preprocess": "^4.7.2",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
     "typescript": "~4.0.3"
