--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
     "rxjs": "~6.6.3",
+    "svelte-navigator": "^3.1.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
   },
